# MafLib

./: .clang-format  .clangd  CMakeLists.txt  GEMINI.md  README.md
docs/doxygen/html/: annotated.html  classes.html  concepts.html  dir_000000_000004.html  dir_000002_000000.html  dir_000002_000004.html  dir_000002_000013.html  dir_000005_000002.html  dir_000005_000004.html  dir_000005_000012.html  dir_000005_000013.html  dir_000006_000004.html  dir_000007_000004.html  dir_000008_000002.html  dir_000008_000004.html  dir_000009_000002.html  dir_000009_000004.html  dir_000010_000004.html  dir_000011_000004.html  dir_000012_000004.html  dir_000013_000004.html  dir_1dcbc4fa9e8295f7961cf86cef3ffbb9.html  dir_1dcbc4fa9e8295f7961cf86cef3ffbb9_dep.map  dir_1dcbc4fa9e8295f7961cf86cef3ffbb9_dep.md5  dir_4e3b6e71b06f15e3d11e049420df5083.html  dir_4e3b6e71b06f15e3d11e049420df5083_dep.map  dir_686072033797fea396a364176714ed82.html  dir_686072033797fea396a364176714ed82_dep.map  dir_838627738e547783d4603121a4ba4cac.html  dir_838627738e547783d4603121a4ba4cac_dep.map  dir_838627738e547783d4603121a4ba4cac_dep.md5  dir_8ccf5307d18d5ecbd4aa29be47619e03.html  dir_8ccf5307d18d5ecbd4aa29be47619e03_dep.map  dir_8ccf5307d18d5ecbd4aa29be47619e03_dep.md5  dir_9b20bf8f489a7700763b348d2e7cf019.html  dir_9b20bf8f489a7700763b348d2e7cf019_dep.map  dir_9baea58fd46606b034aa83111230734e.html  dir_9baea58fd46606b034aa83111230734e_dep.map  dir_9baea58fd46606b034aa83111230734e_dep.md5  dir_9f43e59590c759679b138df8b7d7f4ba.html  (+103 more)
docs/doxygen/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_a.js  classes_c.js  concepts_0.js  concepts_1.js  concepts_2.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  (+50 more)
docs/doxygen/latex/: annotated.tex  concepts.tex  dir_1dcbc4fa9e8295f7961cf86cef3ffbb9.tex  dir_1dcbc4fa9e8295f7961cf86cef3ffbb9_dep.md5  dir_4e3b6e71b06f15e3d11e049420df5083.tex  dir_4e3b6e71b06f15e3d11e049420df5083_dep.md5  dir_686072033797fea396a364176714ed82.tex  dir_686072033797fea396a364176714ed82_dep.md5  dir_838627738e547783d4603121a4ba4cac.tex  dir_838627738e547783d4603121a4ba4cac_dep.md5  dir_8ccf5307d18d5ecbd4aa29be47619e03.tex  dir_9b20bf8f489a7700763b348d2e7cf019.tex  dir_9b20bf8f489a7700763b348d2e7cf019_dep.md5  dir_9baea58fd46606b034aa83111230734e.tex  dir_9f43e59590c759679b138df8b7d7f4ba.tex  dir_9f43e59590c759679b138df8b7d7f4ba_dep.md5  dir_a238549e71e2e91523e8086c3fe9583d.tex  dir_a238549e71e2e91523e8086c3fe9583d_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.tex  dir_d44c64559bbebec7f509842c48db8b23_dep.md5  dir_d6279157da222cf487899a8bd65e6335.tex  dir_d6279157da222cf487899a8bd65e6335_dep.md5  dir_ec499bfe2ce256c0e11e9d8cd4984d5e.tex  dir_ec499bfe2ce256c0e11e9d8cd4984d5e_dep.md5  dir_efba9a4e2aec7d86262a6381367b8d9a.tex  dir_efba9a4e2aec7d86262a6381367b8d9a_dep.md5  dir_f47d0c28b4189d4e9f5e06b8cb9b7412.tex  dir_f47d0c28b4189d4e9f5e06b8cb9b7412_dep.md5  dirs.tex  files.tex  hierarchy.tex  namespaces.tex  refman.tex
include/MafLib/main/: GlobalHeader.hpp
include/MafLib/math/: ExtendedInteger.hpp  Math.hpp  constants.hpp
include/MafLib/math/linalg/: Cholesky.hpp  Kernels.hpp  (+17 more)
include/MafLib/utility/: Conversions.hpp  Math.hpp
tests/: ITest.hpp
tests/math/: CMakeLists.txt  LinAlgTests.cpp  MatrixTests.cpp  OptimizationTests.cpp  VectorTests.cpp
tests/math/linalg/: CMakeLists.txt  LinAlgTests.cpp  MatrixTests.cpp  VectorTests.cpp  ViewTests.cpp
tests/math/optimization/: BisectionTests.cpp  CMakeLists.txt  FixedPointTests.cpp  GoldenSectionTests.cpp  NewtonRaphsonTests.cpp  OptimizationTests.cpp
(+1091 files in other folders)
